--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: ruby
 before_install:
+  - sudo add-apt-repository ppa:miurahr/vagrant
   - sudo apt-get update -qq
-  - sudo apt-get install -qq libvirt-dev libvirt-bin
+  - sudo apt-get install -qq libvirt-dev libvirt-bin qemu-kvm qemu
 rvm:
   - 1.9.3
   - 2.0.0
