--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: ruby
 before_install:
-  - sudo add-apt-repository ppa:miurahr/vagrant
+  - sudo add-apt-repository -y ppa:miurahr/vagrant
   - sudo apt-get update -qq
   - sudo apt-get install -qq libvirt-dev libvirt-bin qemu-kvm qemu
 rvm:
