--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ before_install:
   - sudo add-apt-repository -y ppa:miurahr/vagrant
   - sudo apt-get update -qq
   - sudo apt-get install -qq libvirt-dev libvirt-bin qemu-kvm qemu
+  - sudo usermod -G kvm,libvirtd $USER
 rvm:
   - 1.9.3
   - 2.0.0
