--- a/spec/Vagrantfile
+++ b/spec/Vagrantfile
@@ -1,5 +1,5 @@
 Vagrant.configure('2') do |config|
-  # You should use VMware (Workstation or Fusion) or KVM(intel) to run this box
+  # You should use VMware (Workstation or Fusion) or KVM to run this box
   # because VirtualBox doesn't support nested virtualization, which
   # is required to run KVM (https://www.virtualbox.org/ticket/4032)
   config.vm.provider :vmware_fusion do |vmware, override|
@@ -14,6 +14,7 @@ Vagrant.configure('2') do |config|
   #   options kvm-amd   nested=1
   #
   # to use KVM with nested virtulization support.
+  # The box here is mostly same image as vmwares but adding nfs client
   config.vm.provider :kvm do |kvm, override|
     override.vm.box     = 'vagrant-kvm'
     override.vm.box_url = 'https://downloads.da-cha.jp/public_file/vagrant-kvm.box'
