--- a/spec/Vagrantfile
+++ b/spec/Vagrantfile
@@ -17,7 +17,7 @@ Vagrant.configure('2') do |config|
   # The box here is mostly same image as vmwares but adding nfs client
   config.vm.provider :kvm do |kvm, override|
     override.vm.box     = 'vagrant-kvm'
-    override.vm.box_url = 'https://downloads.da-cha.jp/public_file/vagrant-kvm.box'
+    override.vm.box_url = 'https://s3-ap-northeast-1.amazonaws.com/miurahr-public/vagrant-kvm.box'
   end
 
   config.vm.provision :shell, inline: <<-SH
