--- a/spec/Vagrantfile
+++ b/spec/Vagrantfile
@@ -19,15 +19,14 @@ Vagrant.configure('2') do |config|
     override.vm.box_url = 'https://vagrant-kvm-boxes.s3.amazonaws.com/vagrant-kvm.box'
   end
 
+  if Vagrant.has_plugin?("vagrant-cachier")
+    config.cache.auto_detect = true
+  end
+
   config.vm.provision :shell, inline: <<-SH
     set -x
 
     export DEBIAN_FRONTEND=noninteractive
-
-    ## when use apt-cacher
-    #echo 'Acquire::http::Proxy "http://192.168.123.1:3142";' > /tmp/01proxy
-    #sudo mv /tmp/01proxy /etc/apt/apt.conf.d/01proxy
-
     sudo apt-get update
 
     sudo apt-get install -y ruby2.0-dev
