--- a/spec/Vagrantfile
+++ b/spec/Vagrantfile
@@ -17,7 +17,7 @@ Vagrant.configure('2') do |config|
   config.vm.provider :kvm do |kvm, override|
     kvm.memory_size     = '512m'
     override.vm.box     = 'vagrant-kvm'
-    override.vm.box_url = 'https://vagrant-kvm-boxes.s3.amazonaws.com/vagrant-kvm.box'
+    override.vm.box_url = 'https://vagrant-kvm-boxes.s3.amazonaws.com/vagrant-kvm-trusty-20140330.box'
   end
 
   if Vagrant.has_plugin?("vagrant-cachier")
