--- a/spec/fedora/Vagrantfile
+++ b/spec/fedora/Vagrantfile
@@ -65,6 +65,13 @@ Vagrant.configure('2') do |config|
     mkdir -p /home/vagrant/.gem || echo "already exist ~/.gem, changing owner"
     sudo chown -R vagrant.vagrant /home/vagrant/.gem
 
+    # Add default provider environment variable
+    cp /home/vagrant/.bashrc /tmp/bashrc
+    echo export VAGRANT_DEFAULT_PROVIDER=kvm >> /tmp/bashrc
+    cp /tmp/bashrc /home/vagrant/.bashrc
+    chown vagrant.vagrant /home/vagrant/.bashrc
+    rm /tmp/bashrc
+
     [[ `sudo gem list | grep bundler` ]] || sudo gem install bundler
 
     ## Now you can do
