--- a/spec/Vagrantfile
+++ b/spec/Vagrantfile
@@ -58,6 +58,17 @@ Vagrant.configure('2') do |config|
     sudo apt-get install -qq apparmor-utils
     sudo aa-complain /usr/lib/libvirt/virt-aa-helper
 
+    # Work around vagrant-cachier bug
+    mkdir -p /home/vagrant/.gem || echo "already exist ~/.gem, changing owner"
+    sudo chown -R vagrant.vagrant /home/vagrant/.gem
+
+    # Add default provider environment variable
+    cp /home/vagrant/.bashrc /tmp/bashrc
+    echo export VAGRANT_DEFAULT_PROVIDER=kvm >> /tmp/bashrc
+    cp /tmp/bashrc /home/vagrant/.bashrc
+    chown vagrant.vagrant /home/vagrant/.bashrc
+    rm /tmp/bashrc
+
     [[ `sudo gem list | grep bundler` ]] || sudo gem install --version '~> 1.5.2' bundler
 
     ## Now you can do
